Touching up the animations

--- a/src/_layouts/crown-corks/crown-corks.html
+++ b/src/_layouts/crown-corks/crown-corks.html
@@ -12,7 +12,7 @@ layout: default
       {% include video.html param=crownItem %}
   {% else %}
     {% if crownItem.id == "exterior-side" %}
-      <div id="exterior-side-wrapper" class="js-animate" style="background-image:url({{ crownItem.bgImage }}); background-position: {{ crownItem.bgImagePosition }}; background-size: {{ crownItem.bgImageSize }};">
+      <div id="exterior-side-wrapper" style="background-image:url({{ crownItem.bgImage }}); background-position: {{ crownItem.bgImagePosition }}; background-size: {{ crownItem.bgImageSize }};">
       {% include section.html param=crownItem %}
       <div class="container">
         <div class="row">
