--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -9,6 +9,8 @@
 
 @import "hamburgers/_sass/hamburgers/hamburgers";
 
+@import "magnific/main.scss";
+
 // Layouts
 @import "layout/layout-two-thirds/layout-two-thirds";
 @import "layout/layout-two-column/layout-two-column";
