--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -42,7 +42,7 @@
             </h2>
             <ul class="list">
               <li class="list__item">
-                <a class="list__item__link" href="{{ site.data.contact[langcode].contact.linkInLink }}">Linked In</a>
+                <a class="list__item__link" href="{{ site.data.contact[langcode].contact.linkInLink }}" target="_blank">Linked In</a>
               </li>
             </ul>
           </div>
