--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -36,7 +36,7 @@
 
 
   <!-- CSS -->
-  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+  <link rel="stylesheet" href="{{ site.url }}/assets/stylesheets/animate.css">
   <link rel="stylesheet" href="{{ site.url }}/assets/stylesheets/style.css">
 
   <!-- GA -->
