--- a/src/_includes/video.html
+++ b/src/_includes/video.html
@@ -9,7 +9,7 @@
       <h1 class="title">{{ video.title }}</h1>
       <h2 class="text">{{ video.subtitle }}</h2>
       {% if video.WatchFullVideo == true %}
-        <a class="video-element__watch-full-video" href="{{video.FullVideoURL}}">
+        <a class="video-element__watch-full-video js-popup-trigger" href="{{video.FullVideoURL}}">
           <svg class="play-button" version="1.1" xmlns="http://www.w3.org/2000/svg" x="0" y="0" width="42" height="42" viewBox="0 0 42 42" enable-background="new 0 0 42 42" xml:space="preserve">
             <path fill="#FFFFFF" d="M21 0.8C9.9 0.8 0.8 9.9 0.8 21c0 11.1 9 20.2 20.2 20.2 11.1 0 20.2-9 20.2-20.2C41.2 9.9 32.1 0.8 21 0.8zM17 29.1V12.9L28.5 21 17 29.1z"/>
           </svg><br/>
