--- a/src/assets/scss/base/_see-the-difference.scss
+++ b/src/assets/scss/base/_see-the-difference.scss
@@ -9,7 +9,7 @@ ul.tabs{
 }
 
 ul.tabs li{
-	background: #b3b3b3;
+	background: $brand-primary;
 	color: white;
 	display: inline-block;
 	padding: 7px 30px 5px 30px;
