--- a/src/assets/scss/components/video/_video.scss
+++ b/src/assets/scss/components/video/_video.scss
@@ -4,7 +4,7 @@
   position: relative;
   overflow: hidden;
   @include media-breakpoint-up(md) {
-    min-height: 90%;
+    min-height: 95%;
   }
 
   // Tablet
@@ -18,13 +18,22 @@
   @include media-breakpoint-up(md) {
     &__content {
       @include vertically-centered();
-      top: 32%;
-      opacity: 0;
-      transition: top .9s, opacity .4s;
       z-index: 3;
-      &.is-loaded {
-        top: 50%;
+      > * {
+        opacity: 0;
+        transition: opacity 1s;
+      }
+      &.is-loaded > *{
         opacity: 1;
+        &:nth-child(1) {
+          transition-delay: 0s;
+        }
+        &:nth-child(2) {
+          transition-delay: .1s;
+        }
+        &:nth-child(3) {
+          transition-delay: .1s;
+        }
       }
     }
     // Set padding when max width reached
@@ -39,14 +48,25 @@
     &__content {
       position: relative;
       z-index: 3;
-      opacity: 0;
-      transition: opacity .4s;
       padding-top: 6rem;
       padding-bottom: 2rem;
       padding-left: $gutter-percentage;
       padding-right: $gutter-percentage;
-      &.is-loaded {
+      > * {
+        opacity: 0;
+        transition: opacity 1s;
+      }
+      &.is-loaded > *{
         opacity: 1;
+        &:nth-child(1) {
+          transition-delay: 0s;
+        }
+        &:nth-child(2) {
+          transition-delay: .5s;
+        }
+        &:nth-child(3) {
+          transition-delay: .8s;
+        }
       }
     }
   }
@@ -147,7 +167,8 @@
   &.video--homepage {
     .video-element__content {
       .title {
-        margin-bottom: 0;
+        margin-bottom: 10px;
+        margin-top: 50px;
       }
       .text {
         @extend .text--large;
@@ -182,30 +203,33 @@
   &__mouse {
 
   }
+
   &__arrow {
     position: relative;
     animation: none;
   }
+
   &__text {
     font-size: $font-size-xxs;
   }
 
-  &:hover {
-    .scroll-down__arrow {
-      animation: scrolldown .8s ease-out infinite;
-    }
+  .scroll-down__arrow {
+    animation: scrolldown 1.6s ease-in-out infinite;
   }
+
   @include media-breakpoint-up(md) {
     display: block;
   }
-
 }
 
 @keyframes scrolldown {
   0%{
     transform: translateY(0px);
   }
-  100%{
+  50%{
     transform: translateY(5px);
+  }
+  100%{
+    transform: translateY(0px);
   }
 }
