--- a/src/_includes/video.html
+++ b/src/_includes/video.html
@@ -3,8 +3,8 @@
   <div id="js-video">
     <video loop muted class="video-element__tag"></video>
     <div style="display:none" class=""><img src="{{site.url}}{{ video.videoPoster }}" /></div>
-    <div class="video-element__cover" style="background-image:url({{site.url}}{{ video.videoPoster }});"></div>
-    <div class="video-element__cover--mobile" style="display:none; background-image:url({{site.url}}{{ video.videoMobilePoster }});"></div>
+    <div class="video-element__cover" style="display: none; background-image:url({{site.url}}{{ video.videoPoster }});"></div>
+    <div class="video-element__cover--mobile" style="display: none; background-image:url({{site.url}}{{ video.videoMobilePoster }});"></div>
     <div class="video-element__content">
       <h1 class="title">{{ video.title }}</h1>
       <h2 class="text">{{ video.subtitle }}</h2>
