adding some updates to scripts

--- a/src/_includes/video.html
+++ b/src/_includes/video.html
@@ -26,7 +26,7 @@
     </div>
   </div>
 </div>
-<script src="{{site.url}}/assets/javascript/vendors/bideo.js"></script>
+<script src="{{site.url}}/assets/javascript/vendors/bideo.min.js"></script>
 <script type="text/javascript">
 (function () {
   var bv = new Bideo();
