--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -3,6 +3,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="format-detection" content="telephone=no">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/manifest.json">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#8a8a8a">
+  <meta name="theme-color" content="#ffffff ">
   <script type="text/javascript">
     /*! modernizr 3.4.0 (Custom Build) | MIT *
      * https://modernizr.com/download/?-touchevents-videoautoplay-setclasses !*/
@@ -31,7 +37,7 @@
       z-index: 2;
     }
   </style>
-  <!-- CSS -->  
+  <!-- CSS -->
   <link rel="stylesheet" href="{{ site.url }}/assets/stylesheets/style.css">
 
 
