adding new changes

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -81,8 +81,8 @@ $link-hover-decoration: none !default;
 //
 // Font, line-height, and color for body text, headings, and more.
 
-$pf-thin: 'PF DIN Text Pro Thin';
-$pf-light: 'PF DIN Text Pro Light';
+$pf-thin: 'PFDINTextPro-Thin';
+$pf-light: 'PFDINTextPro-Light';
 
 $font-family-base:  $pf-light !default;
 
