--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -34,7 +34,7 @@
             </h2>
             <div class="text"><a class="footer__link" href="tel:{{ site.data.contact[langcode].contact.callusNumber }}">{{ site.data.contact[langcode].contact.callusNumber }}</a></div>
             <div class="text"><a class="footer__link" href="mailto:{{ site.data.contact[langcode].contact.email }}">{{ site.data.contact[langcode].contact.email }}</a></div>
-            <a class="footer__link footer__link--skype" href="skype:{{ site.data.contact[langcode].contact.skypeUsername }}?call"><i class="fa fa-skype" aria-hidden="true"></i>{{ site.data.contact[langcode].contact.skypetext }}</a>
+          <!--  <a class="footer__link footer__link--skype" href="skype:{{ site.data.contact[langcode].contact.skypeUsername }}?call"><i class="fa fa-skype" aria-hidden="true"></i>{{ site.data.contact[langcode].contact.skypetext }}</a> -->
           </div>
           <div class="footer__item col-sm-6 col-lg-3">
             <h2 class="title title--block text--light-colored">
