--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -3,6 +3,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="format-detection" content="telephone=no">
+  <link rel="shortcut icon" href="/favicon.ico" type="image/vnd.microsoft.icon" />
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -42,18 +43,6 @@
 
 
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-  <script type="text/javascript">
-      (function() {
-          var path = '//easy.myfonts.net/v2/js?sid=173679(font-family=PF+DIN+Text+Pro+Thin)&sid=173743(font-family=PF+DIN+Text+Pro+Regular)&sid=173780(font-family=PF+DIN+Text+Pro+Light)&key=55L9f9LFVV',
-              protocol = ('https:' == document.location.protocol ? 'https:' : 'http:'),
-              trial = document.createElement('script');
-          trial.type = 'text/javascript';
-          trial.async = true;
-          trial.src = protocol + path;
-          var head = document.getElementsByTagName("head")[0];
-          head.appendChild(trial);
-      })();
-  </script>
 
   <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title[page.lang] | escape }}{% endif %} | {{ site.basehtmltitle }}</title>
   {% if page.title %}
