Add coooke nad privacy texts

--- a/src/_layouts/cookie-policy/cookie-policy.html
+++ b/src/_layouts/cookie-policy/cookie-policy.html
@@ -14,19 +14,13 @@ layout: default
       <h2 class="subtitle">General</h2>
       <p>Cookies are small text files that are being saved on your computer when an Online Offer is visited. In case you access this Online Offer another time, your browser sends the cookies' content back to the respective offeror and, thus, allows the re-identification of the terminal device. Reading the cookies allows us to design our Online Offers optimally for you and makes it easier for you to use them.</p>
       <h2 class="subtitle">Deactivation and deletion of cookies</h2>
-      <p>When you visit our internet pages you will be asked in a cookie layer pop up whether you wish to allow the cookies which are being set on our page or you want to deactivate them in the settings. In case you decide to block cookies, an opt out cookie is set in your browser. This cookie exclusively serves the purpose of assigning your objection. Deactivating cookies may disable individual functions of our internet pages. Please note that an opt out cookie may, for technical reasons, only be set for the browser that was used to set it. In case you delete cookies or use a different browser or a different terminal device, you must opt out again. The preference setting does not apply to cookies that are being set during your visits on third party internet pages by other providers.</p>
-
-      <p>Your browser allows you to delete all cookies at all times. To do so, please consult your browser's help functions. This might, however, lead to individual functions no longer being available.</p>
-
-      <p>In addition, you are able to manage and deactivate the use of third party cookies on the following web page:<br>
-        <a href="http://www.youronlinechoices.com/uk/your-ad-choices" target="_blank">http://www.youronlinechoices.com/uk/your-ad-choices</a>. As we do not operate this website, we are not responsible and we are unable to influence content and availability.</p>
-
+<p>When you visit our internet pages you will be asked in a cookie layer pop up whether you wish to allow the cookies which are being set on our page. In case you decide to block cookies, an opt out cookie is set in your browser. This cookie exclusively serves the purpose of assigning your objection. Deactivating cookies may disable individual functions of our internet pages. Please note that an opt out cookie may, for technical reasons, only be set for the browser that was used to set it. In case you delete cookies or use a different browser or a different terminal device, you must opt out again. The preference setting does not apply to cookies that are being set during your visits on third party internet pages by other providers.</p>
+<p>Your browser allows you to delete all cookies at all times. To do so, please consult your browser's help functions. This might, however, lead to individual functions no longer being available.</p>
+      <p>In addition, you are able to manage and deactivate the use of third party cookies on the following web page:<br/><a href="http://www.youronlinechoices.com/uk/your-ad-choices" target="_blank">http://www.youronlinechoices.com/uk/your-ad-choices</a>.</p>
       <h2 class="subtitle">Overview of cookies used by us</h2>
       <p>In this section, please find an overview of cookies we use.</p>
-      <p><strong>Analytical cookies</strong></p>
-
-      <p>We use analytical cookies to record the usage behavior (e.g., ad banners clicked, search queries put in) of our users and to evaluate it statistically.</p>
-
+      <h2 class="subtitle">Analytical cookies</h2>
+      <p>We use analytical cookies to record the usage behavior of our users and to evaluate it statistically. These cookies include  _ga _gid_gat. According to Google these cookies don't collect any personalize information.</p>
     </div>
   </div>
 </div>
