--- a/src/_layouts/privacy-policy/privacy-policy.html
+++ b/src/_layouts/privacy-policy/privacy-policy.html
@@ -10,7 +10,40 @@ layout: default
   </div>
 
   <div class="column">
-    <div class="text text--small">TODO</div>
+    <div class="text text--small">
+      <h2 class="subtitle">Controller</h2>
+      <p>ASTIR Vitogiannis Bros SA (hereby the “Company”), which is located at the Industrial Park of Avlonas, Greece, is responsible for the operation of this website and any personal information that visitors choose to submit, are treated with confidentiality and legality.</p>
+      <h2 class="subtitle">Our goal</h2>
+      <p>To protect and process any personal information provided to us, with lawful, fair and transparent practices in relation to the data subject.</p>
+      <h2 class="subtitle">Regulatory compliance</h2>
+      <p>Processing and protection of personal data that are collected in this website, are governed by the terms of the current Privacy Policy and legislation in force, regarding legal rights of data subjects.</p>
+      <h2 class="subtitle">Data that we collect and how we use it</h2>
+      <p>Every visitor may provide personal information such as: name, surname, e-mail, phone number, address. By submitting these data, visitors give their express and unreserved consent to the processing of these data and their transfer to third parties as described below. The Company collects these data to respond to any enquiries or provide you with information that you have requested.</p>
+      <p>Personal data are stored, distributed and processed by our trained staff, depending on the nature of the enquiry. Access to personal data is only given to authorized personnel, as appropriate and depending on the purpose of the processing.</p>
+      <p>Our employees treat these data with confidentiality, due diligence and consideration, in accordance with current legislation in force.</p>
+      <p>Processing includes the following actions: collection, recording, organizing, structuring, storing, adaptation or alteration, retrieval, consultation, use, disclosure by transmission, dissemination, combination or alignment, restriction, erasure, destruction.</p>
+      <h2 class="subtitle">Data distribution</h2>
+      <p>The recipients of personal data that the Company is entitled to notify under certain occasions such as contract, relevant legislation, judicial and regulatory decision may be public and independent administrative authorities, services, judicial authorities as well as civil servants. In any other case, the Company is committed that any stored personal data will not be disclosed, sold, exchanged or granted. You are advised not to send any personal data through unsafe means. A secure communication channel via ‘Contact Us’ filling form is provided at this website.</p>
+      <h2 class="subtitle">Visitor Rights – Communication</h2>
+      <p>Every data subject maintains the right of access to his personal data held by the Company and to know whether his personal data are or have been processed, the purpose of their processing, the recipients and the progress of the processing. In any case, this person might ask for a copy and/or declare a change, erasure, limit/restrict processing, oppose the processing as well as the portability of such data. For that purpose, every person should contact the Company by sending an e-mail to the following address: <a href="mailto:privacy@vitogiannis.gr">privacy@vitogiannis.gr</a> or communicating with the Data Protection Officer at <a href="mailto:d.kriebardis@vitogiannis.gr">d.kriebardis@vitogiannis.gr</a>.</p>
+      <p>The Company will make sure that this request will be fulfilled at the earliest convenience. You also have the right to make a complaint to the Local supervisory authority.</p>
+      <p>Visitors may withdraw acceptance of a consent to process their personal data if such data are no longer necessary in relation to the purpose for which have been submitted and are not necessary for further retention due to legal or other obligations of the Company.</p>
+      <h2 class="subtitle">Data Retention</h2>
+      <p>We retain your Personal Information for as long as necessary to fulfill the purpose of processing, based on your request unless a longer retention period is required or permitted by law.<p
+      <h2 class="subtitle">Cookies</h2>
+      <p>To ensure the effectiveness of this website, data related to the electronic equipment used for access, are recorded automatically. These data include information like the IP address of the visitor, as well as data from “cookies” that are sent and installed on your computer. The “cookies” do not have access to your computer nor are they aware of any document or file on your computer and they provide us with the ability to detect the manner of navigation of the visitors on our website as well as information on the pages visited and the choices made during the visit. Information like the number and the frequency of visits can also be recorded to improve characteristics like the content and the quality of our website.</p>
+      <p>If you want to delete any cookies that may already be on your computer or device, please refer to the instructions for your file management software to locate the file or directory that stores cookies. If you want to stop cookies being stored on your computer in future visits, please refer to your browser manufacturer’s instructions by clicking “Help” in your browser menu. Further information on cookies is available at www.allaboutcookies.org. By deleting our cookies or disabling future cookies you may not be able to access certain areas or features of our website.</p>
+      <h2 class="subtitle">Children</h2>
+      <p>The use of this website is not addressed to children therefore, we do not collect personal information from children under the age of eighteen (18). In case, any submission from a visitor under the age of eighteen (18) in the website is observed, data will be deleted.</p>
+      <h2 class="subtitle">Protection of personal Information</h2>
+      <p>To avoid any unauthorized access or accidental or involuntary disclosure of personal data, the Company has installed reliable technical means and implemented certain procedures to process and protect personal data in a secure way, assuring their confidentiality, integrity, availability, privacy and security.</p>
+      <h2 class="subtitle">Website access and Policy amendments</h2>
+      <p>Any access to this website indicates that Privacy Policy and Terms of Use are accepted. The Company retains the right to amend the current Privacy Policy without prior notice. Every visitor is advised to check periodically this policy for any potential changes. External service providers might be used, responsible for the function of our website. You are providing your consent for the possible access of those persons to data that you enter our website, and which would allow for your identification. The Company is committed to undertake every possible effort by making sure that: i) the external partners i.e the developing and hosting agency of the site, operate with respect to this Privacy Policy ii) having no right to use data that would allow for the identification of users for any purpose other than the completion of the work or project that has been assigned to them and are committed to maintain discretion and confidentiality.</p>
+      <h2 class="subtitle">Third-party sites</h2>
+      <p>Our website may contain links to third party sites which we do not operate or endorse. These websites may use cookies and collect your personal information in accordance with their own privacy policies. This privacy policy does not apply to third party websites and the Company is neither responsible for third party websites which are connected with its own website, nor for privacy policies and data provision policies that are applied by these third parties.</p>
+      <h2 class="subtitle">Contact us</h2>
+      <p>If you have any questions or comments regarding this privacy policy or practices, relevant to the processing of personal data, please contact us at the e-mail address <a href="mailto:privacy@vitogiannis.gr">privacy@vitogiannis.gr</a>, call at +3022950 29371 or contact Data Protection Officer at <a href="mailto:d.kriebardis@vitogiannis.gr">d.kriebardis@vitogiannis.gr</a><./p>
+    </div>
   </div>
 </div>
 </div>
