--- a/src/_layouts/privacy-policy/privacy-policy.html
+++ b/src/_layouts/privacy-policy/privacy-policy.html
@@ -42,7 +42,7 @@ layout: default
       <h2 class="subtitle">Third-party sites</h2>
       <p>Our website may contain links to third party sites which we do not operate or endorse. These websites may use cookies and collect your personal information in accordance with their own privacy policies. This privacy policy does not apply to third party websites and the Company is neither responsible for third party websites which are connected with its own website, nor for privacy policies and data provision policies that are applied by these third parties.</p>
       <h2 class="subtitle">Contact us</h2>
-      <p>If you have any questions or comments regarding this privacy policy or practices, relevant to the processing of personal data, please contact us at the e-mail address <a href="mailto:privacy@vitogiannis.gr">privacy@vitogiannis.gr</a>, call at +3022950 29371 or contact Data Protection Officer at <a href="mailto:d.kriebardis@vitogiannis.gr">d.kriebardis@vitogiannis.gr</a><./p>
+      <p>If you have any questions or comments regarding this privacy policy or practices, relevant to the processing of personal data, please contact us at the e-mail address <a href="mailto:privacy@vitogiannis.gr">privacy@vitogiannis.gr</a>, call at +3022950 29371 or contact Data Protection Officer at <a href="mailto:d.kriebardis@vitogiannis.gr">d.kriebardis@vitogiannis.gr</a>.</p>
     </div>
   </div>
 </div>
